--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Nunito", "Segoe UI", "Arial", sans-serif;
+  height: 100%;
 }
 
 a {
@@ -15,4 +16,8 @@ a {
 * {
   box-sizing: border-box;
   font-family: "Nunito";
+}
+
+#__next {
+  height: 100%;
 }
