--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,11 @@ a {
   font-family: "Nunito";
 }
 
+::selection {
+  background-color: #a8dadc;
+  color: #313131;
+}
+
 #__next {
   height: 100%;
 }
